# petstore-docs

./: .gitignore  404.html  README.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-docs-pr.yml  deploy-docs.yml
OpenAPI-Client-Pydantic/: index.html
docs/: hello.md  index.md
docs/javascripts/: redirect-root.js
fastapi/: index.html
fastapi/allure-history-design/: index.html
fastapi/allure-quick-reference/: index.html
fastapi/architecture/: index.html
fastapi/badges/: index.html
fastapi/changelog/: index.html
fastapi/configuration/: index.html
fastapi/deployment/: index.html
fastapi/e2e-coverage/: index.html
fastapi/getting-started/: index.html
fastapi/testing/: index.html
grpc/: index.html
grpc/architecture/: index.html
grpc/running-the-server/: index.html
grpc/running-the-tests/: index.html
hello/: index.html
mcp/architecture/: index.html
mcp/configuration/: index.html
mcp/deployment-guide/: index.html
mcp/development-guide/: index.html
mcp/overview/: index.html
mcp/resources/: index.html
mcp/tools/: index.html
openapi-client-pydantic/: index.html
other/: checklist.md  quotes.md
react-ui/: LICENSE  index.html
react-ui/CHANGELOG/: index.html
react-ui/CONTRIBUTING/: index.html
react-ui/architecture/: index.html
react-ui/badges_and_graphs/: index.html
react-ui/configuration/: index.html
react-ui/deployment/: index.html
react-ui/getting_started/: index.html
react-ui/loc_acc_prompt/: index.html
search/: search_index.json
test-python/: index.html
(+59 files in other folders)
